--- a/django-web-app/projet_test/tuto/manga/templates/manga/index.html
+++ b/django-web-app/projet_test/tuto/manga/templates/manga/index.html
@@ -28,5 +28,11 @@
             <li>{{u}}</li>
         {% endfor %}
     </ul>
+
+    <ul>
+        {% for book in books%}
+        <li>{{book.title}}</li>
+        {% endfor%}
+    </ul>
 </body>
 </html>
