--- a/django-web-app/projet_test/tuto/manga/static/manga/css/style.css
+++ b/django-web-app/projet_test/tuto/manga/static/manga/css/style.css
@@ -1,8 +1,9 @@
 body{
-    background-color: blanchedalmond;
+    background-color: rgb(49, 47, 44);
     color: red;
     margin: auto;
     width: 800px;
     
 }
 h1{color: blueviolet;}
+ 
