--- a/django-web-app/projet_test/tuto/manga/templates/manga/index.html
+++ b/django-web-app/projet_test/tuto/manga/templates/manga/index.html
@@ -1,5 +1,7 @@
+
 {%  load static %}
 {%  load customtags%}
+
  <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +12,7 @@
 </head>
 <body>
 
-<h1>Bienvenue sur ma top manga</h1>
+<h1>Bienvenue sur  top manga</h1>
  
     <p>{% hello_world username %}     {%now "d/m/Y"%} </p>
     <p>{{message}}</p>
@@ -32,3 +34,4 @@
     </ul>
 </body>
 </html>
+{% include 'manga/footer.html' %} 
