--- a/django-web-app/projet_test/tuto/manga/templates/manga/book-form.html
+++ b/django-web-app/projet_test/tuto/manga/templates/manga/book-form.html
@@ -1,5 +1,5 @@
 
-    <h1>Ajout d'un nouveal ivre</h1>
+    <h1>Gestion des livres</h1>
     <form action="" method="post">
         {% csrf_token %}
         {{form.as_p}}
