--- a/django-web-app/projet_test/tuto/manga/templates/manga/book.html
+++ b/django-web-app/projet_test/tuto/manga/templates/manga/book.html
@@ -15,7 +15,7 @@
       <td>{{ book.title }}</td>
       <td>{{book.quantity}}</td>
       <td><a href="{% url 'manga:show' book.id %}">Voir détails</a></td>
-      <td><a href="">modifier</td>  
+      <td><a href="{% url 'manga:edit' book.id %}">modifier</a></td>  
       <td><a href="{% url 'manga:delete' book.id %}">supprimer</td>    
       <td><a href="{% url 'manga:add'  %}">Ajouter</td>    
     </tr>
